--- a/model_build.ipynb
+++ b/model_build.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "max     75.000000   19.000000   19.000000   20.000000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "[395 rows x 33 columns]>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "[395 rows x 4 columns]>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "max     22.000000    5.000000   75.000000   20.000000      1.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "RandomForestClassifier(n_estimators=1000)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,32 +546,34 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier as rf\n",
     "import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
     "dependent_variable = 'qual_student'\n",
     "x = df[df.columns.difference([dependent_variable])]\n",
     "y = df[dependent_variable]\n",
+    "x_train, x_test, y_train, y_test= train_test_split(x, y, test_size=0.2)\n",
     "clf = rf(n_estimators = 1000)\n",
-    "clf.fit(x, y)"
+    "clf.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5185185185185185"
+       "0.24000000000000005"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred = clf.predict(x)\n",
-    "sklearn.metrics.f1_score(y, pred, average='binary')"
+    "pred = clf.predict(x_test)\n",
+    "sklearn.metrics.f1_score(y_test, pred, average='binary')"
    ]
   },
   {
@@ -584,16 +586,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/home/matrix/dockerfile/apps/model.pkl']"
+       "['dockerfile/apps/model-data.pkl']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,12 +603,13 @@
    "source": [
     "import joblib\n",
     "# modify the file path to where you want to save the model\n",
-    "joblib.dump(clf, 'home/matrix/dockerfile/apps/model.pkl')"
+    "joblib.dump(clf, 'dockerfile/apps/model.pkl')\n",
+    "joblib.dump((x_test, y_test), 'dockerfile/apps/model-data.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
