remove edits to original model build and model-data pkl

--- a/model_build.ipynb
+++ b/model_build.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "max     75.000000   19.000000   19.000000   20.000000  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "[395 rows x 33 columns]>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "[395 rows x 4 columns]>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "max     22.000000    5.000000   75.000000   20.000000      1.000000"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "RandomForestClassifier(n_estimators=1000)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,34 +546,32 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier as rf\n",
     "import sklearn\n",
-    "from sklearn.model_selection import train_test_split\n",
     "dependent_variable = 'qual_student'\n",
     "x = df[df.columns.difference([dependent_variable])]\n",
     "y = df[dependent_variable]\n",
-    "x_train, x_test, y_train, y_test= train_test_split(x, y, test_size=0.2)\n",
     "clf = rf(n_estimators = 1000)\n",
-    "clf.fit(x_train, y_train)"
+    "clf.fit(x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.24000000000000005"
+       "0.5185185185185185"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred = clf.predict(x_test)\n",
-    "sklearn.metrics.f1_score(y_test, pred, average='binary')"
+    "pred = clf.predict(x)\n",
+    "sklearn.metrics.f1_score(y, pred, average='binary')"
    ]
   },
   {
@@ -586,16 +584,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['dockerfile/apps/model-data.pkl']"
+       "['/home/matrix/dockerfile/apps/model.pkl']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,13 +601,12 @@
    "source": [
     "import joblib\n",
     "# modify the file path to where you want to save the model\n",
-    "joblib.dump(clf, 'dockerfile/apps/model.pkl')\n",
-    "joblib.dump((x_test, y_test), 'dockerfile/apps/model-data.pkl')"
+    "joblib.dump(clf, 'home/matrix/dockerfile/apps/model.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
