add test set evaluation for improved model and baseline model & update README

--- a/model_build.ipynb
+++ b/model_build.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "np.random.seed(17313)\n",
     "df = pd.read_csv('data/student-mat.csv', sep=';')"
    ]
   },
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +259,7 @@
        "max     75.000000   19.000000   19.000000   20.000000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +305,7 @@
        "[395 rows x 33 columns]>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +355,7 @@
        "[395 rows x 4 columns]>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +495,7 @@
        "max     22.000000    5.000000   75.000000   20.000000      1.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +539,7 @@
        "RandomForestClassifier(n_estimators=1000)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,32 +547,35 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier as rf\n",
     "import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
     "dependent_variable = 'qual_student'\n",
     "x = df[df.columns.difference([dependent_variable])]\n",
     "y = df[dependent_variable]\n",
+    "x_train, x_test, y_train, y_test= train_test_split(x, y, test_size=0.2)\n",
     "clf = rf(n_estimators = 1000)\n",
-    "clf.fit(x, y)"
+    "clf.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5185185185185185"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Improved model F1 score on the test set: 0.17391304347826086\n",
+      "Improved model accuracy on the test set: 0.759493670886076\n",
+      "Improved model log loss on the test set: 8.306865173231825\n"
+     ]
     }
    ],
    "source": [
-    "pred = clf.predict(x)\n",
-    "sklearn.metrics.f1_score(y, pred, average='binary')"
+    "pred = clf.predict(x_test)\n",
+    "print(f\"Improved model F1 score on the test set: {sklearn.metrics.f1_score(y_test, pred, average='binary')}\")\n",
+    "print(f\"Improved model accuracy on the test set: {sklearn.metrics.accuracy_score(y_test, pred)}\")\n",
+    "print(f\"Improved model log loss on the test set: {sklearn.metrics.log_loss(y_test, pred)}\")"
    ]
   },
   {
