--- a/improved_model_build.ipynb
+++ b/improved_model_build.ipynb
@@ -9,6 +9,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "np.random.seed(17313) # fix a random seed to ensure reproducible results\n",
+    "\n",
     "df = pd.read_csv('data/student-mat.csv', sep=';')"
    ]
   },
@@ -54,11 +56,13 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier as rf\n",
     "import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
     "dependent_variable = 'qual_student'\n",
     "x = df[df.columns.difference([dependent_variable])]\n",
     "y = df[dependent_variable]\n",
+    "x_train, x_test, y_train, y_test= train_test_split(x, y, test_size=0.2)\n",
     "clf = rf(n_estimators = 1000)\n",
-    "clf.fit(x, y)"
+    "clf.fit(x_train, y_train)"
    ]
   },
   {
@@ -68,19 +72,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9861111111111112"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Improved model F1 score on the test set: 0.9285714285714286\n",
+      "Improved model accuracy on the test set: 0.9746835443037974\n",
+      "Improved model log loss on the test set: 0.874409523889261\n"
+     ]
     }
    ],
    "source": [
-    "pred = clf.predict(x)\n",
-    "sklearn.metrics.f1_score(y, pred, average='binary')"
+    "pred = clf.predict(x_test)\n",
+    "print(f\"Improved model F1 score on the test set: {sklearn.metrics.f1_score(y_test, pred, average='binary')}\")\n",
+    "print(f\"Improved model accuracy on the test set: {sklearn.metrics.accuracy_score(y_test, pred)}\")\n",
+    "print(f\"Improved model log loss on the test set: {sklearn.metrics.log_loss(y_test, pred)}\")"
    ]
   },
   {
@@ -145,20 +150,14 @@
     "pred = clf.predict(query_df)\n",
     "pred"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5818eb9d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.1 64-bit",
    "name": "python3"
   },
   "language_info": {
